--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="container">
 
       <h1><a href="index.html">Sahyog A</a></h1>
-      <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span></h2>
+      <h2 style="color:#fff">I am a Data Scientist in the making! I have a special interest in chart,graphs and other forms of data visualisations.Apart from data science domain ,I am really interested in newer technologies like Blockchain and Metaverse. I do not have much experience now, but i a learning and hope to achieve all my dreams and goals.<span class="typing" style="color:#12D640"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#header"> <span>Home</span></a></li>
@@ -108,7 +108,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>Focused and enthusiastic developer with a keen interest in software development and Data science . By comprehensive exposure
             to the underlying concepts and applying them vividly to various projects, my love for these domains came into being.
-            I am a passionate individual who thrives to build and apply algorithms to solve real-world industry problems.
+            I am a passionate individual who thrives to build and apply algorithms to solve real-world industry problems.I 'm currently doing my second year in SRM (KATTANKALLUTHUR)in a courese call M.Tech integrated (cse w/s in Data Science). Done my schooling from Ryan International School (kharghar).
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -580,11 +580,14 @@
       <div class="row">
         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
           <a href="https://drive.google.com/file/d/1iHBNV2UkH5LkhAP-1hYRZ2Ez_BQ6g4S7/view?usp=sharing" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
-          <h4 class="title"><a href="https://drive.google.com/file/d/1iHBNV2UkH5LkhAP-1hYRZ2Ez_BQ6g4S7/view?usp=sharing" target="_blank">Resume https://docs.google.com/document/d/1cIdYZVOv2mNddRwtu_stwzIroG__SjsK/edit?usp=drive_web&ouid=110621205234280228140&rtpof=true</a>
+          <h4 class="title"><a href="https://drive.google.com/file/d/1iHBNV2UkH5LkhAP-1hYRZ2Ez_BQ6g4S7/view?usp=sharing" target="_blank">Resume :-   
+            https://docs.google.com/document/d/1cIdYZVOv2mNddRwtu_stwzIroG__SjsK/edit?usp=drive_web&ouid=110621205234280228140&rtpof=true</a>
         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up">
           <a href="https://github.com/sa4475" target="_blank"><div class="icon"><i class="icofont-link"></i></div></a>
           
-          <p class="description" style="color:#fff;"> The github repository contains my repository.</p>
+          <p class="description" style="color:#fff;"> The github repository contains my repository.
+          MY GIT HUB REPOSTORY LINK IS :-
+<href="https://github.com/sa4475?tab=repositories">Github "https://github.com/sa4475?tab=repositories"</href>
         </div>
         <!-- <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
           <a href="https://techingenious.herokuapp.com/" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
