--- a/index.html
+++ b/index.html
@@ -336,29 +336,29 @@
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="https://www.asu.edu/" style="color:#12d640">SRM INSTITUE OF SCEINCE & TECHOLOGY</a><br> </h4>
                 <h5 style="text-align:left;">AUGUST 2021 - ONWARDS</h5>
-                <p style="text-align:left;color:#fff"><em>Software Engineer </em></p>
+                <p style="text-align:left;color:#fff"><em> </em></p>
                 <ul style="text-align:left;">
                   <li>Created my first git hub repositary.</li>
                   <li>Created a hotel menu to calculate total.</li>
-                  <li>created a email verificaton repo in github.</li>
+                  <li>created a email verificaton repo in github.</li> <li>core  member od data science club </li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="https://www.augmenify.com/" style="color:#12d640">SRM INSTITUTE OF SCIENCE & TECHNOLOGY</a><br> </h4>
                 <h5 style="text-align:left;">19 SEPTEMBER  2022 - 23 SEPTEMBER 2022</h5>
-                <p style="text-align:left;color:#fff"><em>Backend Developer</em></p>
+                <p style="text-align:left;color:#fff"><em></em></p>
                 <ul style="text-align:left;">
                   <li>Attended a web development workshop</li>
                   <l1>.created my first website</l1>
-                  <li>core  member od data science club </li>
+                 
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="https://www.epitomesolutions.in/" style="color:#12d640">SRM INSTITURE OF SCIENCE & TECHNOLOGY</a><br> </h4>
                 <h5 style="text-align:left;">SEPTEMBER 2021 ONWARDS</h5>
-                <p style="text-align:left;color:#fff"><em>Software Developer</em></p>
+                <p style="text-align:left;color:#fff"><em></em></p>
                 <ul style="text-align:left;">
-                  <li>BEING THE CLASS REPRESENTATIVE ,I HAVE A GOOD MANAGING SKILLS. HAVE DEVELOPED I MANAGING MY WORK AND TIME </li>
+                  <li>BEING THE CLASS REPRESENTATIVE ,I HAVE DEVELOPED A GOOD MANAGING SKILLS IN BOTH  WORK AND TIME MANAGEMENT. </li>
                
                 </ul>
             </div>
