--- a/index.html
+++ b/index.html
@@ -593,14 +593,12 @@
       <div class="row">
         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
           <a href="https://drive.google.com/file/d/1iHBNV2UkH5LkhAP-1hYRZ2Ez_BQ6g4S7/view?usp=sharing" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
-          <h4 class="title"><a href="https://drive.google.com/file/d/1iHBNV2UkH5LkhAP-1hYRZ2Ez_BQ6g4S7/view?usp=sharing" target="_blank">Resume :-   
-            https://docs.google.com/document/d/1xIooQW71C7TsRLCl-GSwaMyA6Co5KK_P/edit?usp=sharing&ouid=106722065224314399065&rtpof=true&sd=true</a>
+          <h4 class="title"><a href="https://drive.google.com/file/d/1R3dCEyOTd4Ogh7oDCvx9BzbIme_k35pA/view?usp=sharing" target="_blank">Resume Download</a>
         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up">
           <a href="https://github.com/sa4475" target="_blank"><div class="icon"><i class="icofont-link"></i></div></a>
           
           <p class="description" style="color:#0D20DE;"> The github repository contains my repository.
-          MY REPOSTORY LINK IS :-
-<a href="https://github.com/sa4475" target="_blank"> https://github.com/sa4475   
+<a href="https://github.com/sa4475" target="_blank"> click here to check out my github 
             </a>
         </div>
         <!-- <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
@@ -668,7 +666,7 @@ width: 102%;
             <a href="https://www.instagram.com/ssahyoggg/" target="_blank"> https://www.instagram.com/ssahyoggg/
               <h5>Github</h5>
               <a href="https://github.com/sa4475" target="_blank"> https://github.com/sa4475
-          </div>
+          </div></div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
@@ -706,7 +704,7 @@ width: 102%;
   • We created our own web page.<br>
             <h4>Future Plan:</h4> 
             </p>
-  •Integrating the learning outcomes from my peers and Research Scholars and applying concepts in the field of Data Science to implement on complex data sets and generate optimal results based on the client needs.</p>
+  •Integrating the learning outcomes from my peers and Research Scholars and applying concepts in the field of Data Science to implement on complex data sets and generate optimal results based on the client needs.Do get a good placement from any big company</p>
           </div>
         </div>
       </div>
