--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ src="https://www.youtube.com/embed/O5hShUO6wxs">
 </Body>  
 </Html>  
 
-      <img src="https://github.com/sa4475/sa4475.github.io/blob/master/IMG_3597%20(1).gif?raw=true"  width="450" height="450" >
+      <img src="https://github.com/sa4475/sa4475.github.io/blob/master/WhatsApp%20Image%202022-10-01%20at%2021.53.41.jpg"  width="450" height="450" >
       <h2 style="color:#380AF0">I am a Data Scientist in the making! I have a special interest in chart,graphs and other forms of data visualisations.Apart from data science domain ,I am really interested in newer technologies like Blockchain and Metaverse. I do not have much experience now, but i a learning and hope to achieve all my dreams and goals.<span class="typing" style="color:#12D640"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
